script and styles

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,13 @@
 body {
     font-family: 'Lato', 'Helvetica', 'Arial', sans-serif;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
+footer {
+    margin-top: auto;
+}
 /* ------------------------------------
  * Service portal 
  * ------------------------------------ */
