--- a/styles-client-portal.css
+++ b/styles-client-portal.css
@@ -6,6 +6,10 @@
         margin: 0 auto;
     }
 
+    .panel {
+        margin-bottom: 0;
+    }
+
     /* ------------------------------------
      * Service portal 
      * ------------------------------------ */
