--- a/styles-client-portal.css
+++ b/styles-client-portal.css
@@ -1,91 +1,89 @@
-.wsu-portal-page {
-    .container {
-        width: 100%;
-        padding-right: 0 !important;
-        padding-left: 0 !important;
-        margin: 0 auto;
-    }
+.wsu-portal-page .container {
+    width: 100%;
+    padding-right: 0 !important;
+    padding-left: 0 !important;
+    margin: 0 auto;
+}
 
-    .panel {
-        margin-bottom: 0;
-    }
+.wsu-portal-page .panel {
+    margin-bottom: 0;
+}
 
-    /* ------------------------------------
-     * Service portal 
-     * ------------------------------------ */
+/* ------------------------------------
+ * Service portal 
+ * ------------------------------------ */
 
-    .wsu-service-portal {
-        width: 100%;
-        position: relative;
-        margin-top: -15px;
-        padding-top: 8rem;
-        background-color: var(--green);
-    }
+.wsu-service-portal {
+    width: 100%;
+    position: relative;
+    margin-top: -15px;
+    padding-top: 8rem;
+    background-color: var(--green);
+}
 
-    .wsu-service-portal__heading {
-        position: relative; 
-        color: white;
-        font-size: 72px;
-        font-style: italic;
-        letter-spacing: 0.02rem;
-        text-shadow: 0 1px 1px rgba(12, 84, 73, 0.5);
-        margin-bottom: 3rem !important;
+.wsu-service-portal__heading {
+    position: relative; 
+    color: white;
+    font-size: 72px;
+    font-style: italic;
+    letter-spacing: 0.02rem;
+    text-shadow: 0 1px 1px rgba(12, 84, 73, 0.5);
+    margin-bottom: 3rem !important;
 
-        em {
-            color: #ffcc33;
-            font-weight: 500;
-        }
-    }
+}
 
-    .wsu-service-portal__content {
-        position: relative;
-        z-index: 3;
-        padding-top: 18rem;
-        padding-bottom: 1rem;
-    }
+.wsu-service-portal__heading em {
+    color: #ffcc33;
+    font-weight: 500;
+}
 
-    .wsu-button-grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
-        gap: 2em;
-        margin-bottom: 2em;
-        color: #094038;
-        color: white;
-    }
+.wsu-service-portal__content {
+    position: relative;
+    z-index: 3;
+    padding-top: 18rem;
+    padding-bottom: 1rem;
+}
 
-    .wsu-button-grid__button {
-        position: relative;
-        z-index: 3;
-        width: 100%;
-        transition: all 300ms;
-        backdrop-filter: blur(5px);
-        border-radius: 3px;
-        box-shadow: -1px -1px 1px rgba(255,255,255,0.4), 1px 1px 0px rgba(5,33,30,0.9);
-        color: var(--green);
-        height: 7em;
-        overflow:hidden;
-        display: flex;
-        flex-direction: column;
+.wsu-button-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+    gap: 2em;
+    margin-bottom: 2em;
+    color: #094038;
+    color: white;
+}
 
-        background-color: var(--gold-300);
-        background-image: radial-gradient(200% 100% at 50% 100%,rgba(237,189,44,0.7),40%,transparent 100%);
+.wsu-button-grid__button {
+    position: relative;
+    z-index: 3;
+    width: 100%;
+    transition: all 300ms;
+    backdrop-filter: blur(5px);
+    border-radius: 3px;
+    box-shadow: -1px -1px 1px rgba(255,255,255,0.4), 1px 1px 0px rgba(5,33,30,0.9);
+    color: var(--green);
+    height: 7em;
+    overflow:hidden;
+    display: flex;
+    flex-direction: column;
+
+    background-color: var(--gold-300);
+    background-image: radial-gradient(200% 100% at 50% 100%,rgba(237,189,44,0.7),40%,transparent 100%);
+}
 
 
-        &:hover {
-            background-color: var(--gold-100);
-            align-content:center;
-            align-items: center;
-            justify-content:center;
-        }
+.wsu-button-grid__button:hover {
+    background-color: var(--gold-100);
+    align-content:center;
+    align-items: center;
+    justify-content:center;
 
-        /*
-        &:hover {
-        background-color: rgba(255,255,255,0.2);
-        background-image: radial-gradient(200% 100% at 30% 100%,rgba(5,33,30,.9),50%,transparent 100%);
-        text-shadow: 0 1px 1px rgba(12, 84, 73, 0.5);
-        color: #ffffff;
-        }
-         */
+    /*
+    background-color: rgba(255,255,255,0.2);
+    background-image: radial-gradient(200% 100% at 30% 100%,rgba(5,33,30,.9),50%,transparent 100%);
+    text-shadow: 0 1px 1px rgba(12, 84, 73, 0.5);
+    color: #ffffff;
+     */
 }
 
 .wsu-button-grid__link {
@@ -142,166 +140,161 @@
 /* ------------------------------------
  * Search 
  * ------------------------------------ */
-    .wsu-search {
-        background-color: var(--green-700);
-        margin-top: -15px;
-        padding-top: 4rem;
-        padding-bottom: 4rem;
-    }
+.wsu-search {
+    background-color: var(--green-700);
+    margin-top: -15px;
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+}
 
-    .wsu-search__container {
-        display: flex;
-        gap: 2em;
-        margin: 0 auto;
-        width: 70%;
-        justify-content: center;
-        align-items: center;
+.wsu-search__container {
+    display: flex;
+    gap: 2em;
+    margin: 0 auto;
+    width: 70%;
+    justify-content: center;
+    align-items: center;
+}
 
-        h2 {
-            color: var(--gold-300);
-            text-transform: uppercase;
-            font-size: 16px;
-            margin: 0;
-        }
+.wsu-search__container h2 {
+    color: var(--gold-300);
+    text-transform: uppercase;
+    font-size: 16px;
+    margin: 0;
+}
 
-        .site-search {
-            width: 400px;
-            max-width: auto !important;
-            margin-bottom: 0;
-        }
-    }
+.wsu-search__container .site-search {
+    width: 400px;
+    max-width: 0 !important;
+    margin-bottom: 0;
+}
 
-    /* ------------------------------------
-     * Portal overview 
-     * ------------------------------------ */
-    .portal-overview {
-        padding-top: 3em;
-        padding-bottom: 3em;
+/* ------------------------------------
+ * Portal overview 
+ * ------------------------------------ */
+.portal-overview {
+    padding-top: 3em;
+    padding-bottom: 3em;
+}
 
-        h2 {
-            margin-bottom: 1.3em;
-        }
-    }
+.portal-overview h2 {
+    margin-bottom: 1.3em;
+}
 
-    /* ------------------------------------
-     * Footer 
-     * ------------------------------------ */
-    .wsu-footer {
-        width: 100%;
-        padding-top: 3rem;
-        padding-bottom: 5rem;
-        background-color: var(--green-600);
-        color: var(--white);
-        display: flex;
-        border-top: 20px solid var(--green-700);
-        font-weight: 300;
-        font-size: 1.1em;
+/* ------------------------------------
+ * Footer 
+ * ------------------------------------ */
+.wsu-footer {
+    width: 100%;
+    padding-top: 3rem;
+    padding-bottom: 5rem;
+    background-color: var(--green-600);
+    color: var(--white);
+    display: flex;
+    border-top: 20px solid var(--green-700);
+    font-weight: 300;
+    font-size: 1.1em;
+}
 
-        h2,
-        h3 {
-            color: var(--gold-300);
-            font-weight: 500;
-        } 
+.wsu-footer h2,
+.wsu-footer h3 {
+    color: var(--gold-300);
+    font-weight: 500;
+} 
 
-        h2 a,
-        h3 a {
-            color: var(--gold-300);
-            text-underline-offset: 5px;
-            text-decoration-color: var(--green-600);
+.wsu-footer h2 a,
+.wsu-footer h3 a {
+    color: var(--gold-300);
+    text-underline-offset: 5px;
+    text-decoration-color: var(--green-600);
+}
 
-            &:hover {
-                text-decoration-color: var(--gold-300);
-            }
-        }
+.wsu-footer em {
+    display: block;
+    margin-bottom: 0.5em; 
+    font-size: 12px; 
+    font-style: normal;
+    text-transform: uppercase; 
+    letter-spacing: 0.09em;
+}
 
-        em {
-            display: block;
-            margin-bottom: 0.5em; 
-            font-size: 12px; 
-            font-style: normal;
-            text-transform: uppercase; 
-            letter-spacing: 0.09em;
-        }
+.wsu-footer a {
+    color: var(--white); 
+    text-decoration-color: var(--green-200);
+    text-decoration-line: underline;
+    text-decoration-style: solid;
+    text-decoration-thickness: 1px;
+    text-underline-offset: 4px;
+}
 
-        a {
-            color: var(--white); 
-            text-decoration-color: var(--green-200);
-            text-decoration-line: underline;
-            text-decoration-style: solid;
-            text-decoration-thickness: 1px;
-            text-underline-offset: 4px;
+.wsu-footer a:hover {
+    text-decoration-color: var(--white);
+    text-decoration-thickness: 2px;
+    transition: all 300ms;
+}
 
-            &:hover {
-                text-decoration-color: var(--white);
-                text-decoration-thickness: 2px;
-                transition: all 300ms;
-            }
-        }
+.wsu-footer th {
+    font-weight: 400;
+    padding-bottom: 1.5rem;
+    letter-spacing: 0.09em;
+    font-size: 12px; 
+    text-transform: uppercase;
+    color: var(--gold);
+}
 
-        th {
-            font-weight: 400;
-            padding-bottom: 1.5rem;
-            letter-spacing: 0.09em;
-            font-size: 12px; 
-            text-transform: uppercase;
-            color: var(--gold);
-        }
+.wsu-footer td {
+    padding-right: 2em;
+    padding-bottom: 1em;
+}
 
-        td {
-            padding-right: 2em;
-            padding-bottom: 1em;
-        }
+.wsu-footer > div {
+    width: 100%;
+}
 
-        & > div {
-            width: 100%;
-        }
-    }
+/* ------------------------------------
+ * Layout 
+ * ------------------------------------ */
 
-    /* ------------------------------------
-     * Layout 
-     * ------------------------------------ */
+#btnUserProfileMenu {
+    margin-right: 0 !important;
+    padding-right: 2px !important;
+}
 
-    #btnUserProfileMenu {
-        margin-right: 0 !important;
-        padding-right: 2px !important;
-    }
+#Column1 {
+    padding: 0;
+}
 
-    #Column1 {
-        padding: 0;
-    }
+/* Allow full width components */
+.ModuleContent,
+.ModuleContent > div:nth-child(1) {
+    overflow: visible !important;
+}
 
-    /* Allow full width components */
-    .ModuleContent,
-    .ModuleContent > div:nth-child(1) {
-        overflow: visible !important;
-    }
+[id="content"] a {
+    border-bottom: 0;
+}
 
-    [id="content"] a {
-        border-bottom: 0;
-    }
+/* ------------------------------------
+ * Layout 
+ * ------------------------------------ */
 
-    /* ------------------------------------
-     * Layout 
-     * ------------------------------------ */
-
-    #btnUserProfileMenu {
-        margin-right: 0 !important;
-        padding-right: 2px !important;
-    }
+#btnUserProfileMenu {
+    margin-right: 0 !important;
+    padding-right: 2px !important;
+}
 
 
-    /* Replace Bootstrap's container */
-    .wsu-container,
-    .logo-header,
-    #navContainer {
-        width: 100%;
-        margin: 0 auto;
-        padding-right: max(1.5rem, (100% - 1140px) / 2) !important;
-        padding-left: max(1.5rem, (100% - 1140px) / 2) !important;
-    }
+/* Replace Bootstrap's container */
+.wsu-container,
+.logo-header,
+#navContainer {
+    width: 100%;
+    margin: 0 auto;
+    padding-right: max(1.5rem, (100% - 1140px) / 2) !important;
+    padding-left: max(1.5rem, (100% - 1140px) / 2) !important;
+}
 
-    .wsu-container .row {
-        margin-right: -15px;
-        margin-left: -15px;
-    }
+.wsu-container .row {
+    margin-right: -15px;
+    margin-left: -15px;
 }
