--- a/styles-global.css
+++ b/styles-global.css
@@ -92,11 +92,12 @@ a.DetailAction {
             position: absolute;
             display: inline;
             width: 100%;
-            height: 2px;
+            height: 0.075em;
             margin-left: 1rem;
             top: 60%;
             bottom: auto;
             background-color: #ffcc33;
+            transform: translateY(-30%);
         }
     }
 }
