--- a/styles-client-portal.css
+++ b/styles-client-portal.css
@@ -15,6 +15,7 @@
     font-style: italic;
     letter-spacing: 0.02rem;
     text-shadow: 0 1px 1px rgba(12, 84, 73, 0.5);
+    text-shadow: 0 2px 2px rgba(5, 33, 30,0.75);
     margin-bottom: 3rem !important;
 }
 
@@ -40,35 +41,25 @@
 }
 
 .wsu-button-grid__button {
+    display: flex;
+    flex-direction: column;
     position: relative;
     z-index: 3;
     width: 100%;
-    transition: all 300ms;
-    backdrop-filter: blur(5px);
+    padding: 1.5em;
     border-radius: 3px;
-    box-shadow: -1px -1px 1px rgba(255,255,255,0.4), 1px 1px 0px rgba(5,33,30,0.9);
-    color: var(--green);
-    height: 7em;
-    overflow:hidden;
-    display: flex;
-    flex-direction: column;
-
-    background-color: var(--gold-300);
-    background-image: radial-gradient(200% 100% at 50% 100%,rgba(237,189,44,0.7),40%,transparent 100%);
+    transition: all 300ms;
+    color: var(--green-600);
+    box-shadow: 0 0 4px rgba(6, 43, 39,0.3);
+    background-color: var(--gold-200);
+    background-image: radial-gradient(230% 100% at 50% 100%,rgba(219, 174, 37,0.9),50%,transparent 100%)
 }
 
 .wsu-button-grid__button:hover {
     background-color: var(--gold-100);
-    align-content:center;
-    align-items: center;
-    justify-content:center;
-
-    /*
-    background-color: rgba(255,255,255,0.2);
-    background-image: radial-gradient(200% 100% at 30% 100%,rgba(5,33,30,.9),50%,transparent 100%);
-    text-shadow: 0 1px 1px rgba(12, 84, 73, 0.5);
-    color: #ffffff;
-     */
+    background-image: radial-gradient(230% 100% at 50% 100%,rgba(219, 174, 37,0.75),50%,transparent 100%);
+    box-shadow: 0 -1px 3px rgba(255, 245, 214,0.2), 0 6px 8px rgba(5,33,30,0.4);
+    transform: translateY(-5px);
 }
 
 .wsu-button-grid__link {
@@ -78,42 +69,20 @@
 
 .wsu-button-grid__title {
     width: 100%;
-    font-size: 1.1em;
+    font-size: 1.4em;
     line-height: 1.1em;
     font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 0.05em;
-    text-align: center;
-    padding: 1.2rem 2rem 0.6rem;
-
-    position: absolute;
-    top: 50%;
-    transform: translateY(calc(-50% - 0.6rem));
-    transition: transform 200ms;
-    transition: top 300ms;
-}
-
-.wsu-button-grid__button:hover .wsu-button-grid__title {
-    top: 0;
-    transform: translateY(0rem);
-    position: relative;
+    margin-bottom: 1.3rem;
+    text-shadow: 0 -1px 0 rgba(255,245,214,0.3), 0 1px 0 rgba(200, 159, 31, 0.3);
 }
 
 .wsu-button-grid__description {
-    line-height: 1.6rem;
-    opacity: 0;
-    padding: 0 2rem 1.5rem 2rem;
-
-    transform: translateY(10rem);
-    transition: opacity 800ms;
-}
-
-.wsu-button-grid__button:hover .wsu-button-grid__description {
-    opacity: 1;
-    transform: translateY(0rem);
+    line-height: 1.3em;
+    text-shadow: 0 -1px 0 rgba(255,245,214,0.2), 0 1px 0 rgba(200, 159, 31, 0.3);
 }
 
 .wsu-service-portal__background {
+    color: var(--green-700);
     background-image: url('https://services.wayne.edu/TDPortal/Images/Viewer?fileName=f00d37f1-4ba3-4866-ad4f-5dc115c3574e.jpg&beidInt=78');
     background-size: cover;
     background-position: center;
@@ -127,9 +96,11 @@
  * ------------------------------------ */
 .wsu-search {
     background-color: var(--green-700);
-    margin-top: -15px;
-    padding-top: 4rem;
-    padding-bottom: 4rem;
+    padding-top: 2.5rem;
+    padding-bottom: 3rem;
+    position: relative;
+    overflow: hidden;
+    background-image: radial-gradient(200% 100% at 50% 100%,rgba(5,33,30,.9) 10%,transparent 100%);
 }
 
 .wsu-search__container {
@@ -141,10 +112,11 @@
     align-items: center;
 }
 
-.wsu-search__container h2 {
+.wsu-portal-page .wsu-search__container h2 {
     color: var(--gold-300);
     text-transform: uppercase;
-    font-size: 16px;
+    font-size: 18px;
+    letter-spacing: 0.3rem;
     margin: 0;
 }
 
