--- a/styles-client-portal.css
+++ b/styles-client-portal.css
@@ -5,11 +5,14 @@
     width: 100%;
     position: relative;
     margin-top: -15px;
-    padding-top: 8rem;
-    background-color: var(--green);
+    background-color: var(--green-900);
+
+    @media screen and (min-width: 900px) {
+        padding-top: 8rem;
+    }
 }
 
-.wsu-service-portal__heading {
+.wsu-portal-page .wsu-service-portal__heading {
     position: relative; 
     color: white;
     font-style: italic;
@@ -27,17 +30,34 @@
 .wsu-service-portal__content {
     position: relative;
     z-index: 3;
-    padding-top: 18rem;
+    padding-top: 5rem;
     padding-bottom: 1rem;
+
+    @media screen and (min-width: 900px) {
+        padding-top: 18rem;
+        grid-template-columns: repeat(4, minmax(0, 1fr));
+    }
 }
 
 .wsu-button-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
-    gap: 2em;
-    margin-bottom: 2em;
+    gap: 1.5em;
     color: #094038;
     color: white;
+    margin-bottom: 0.9rem;
+    grid-template-rows: repeat(4, minmax(0, 1fr));
+
+    @media screen and (min-width: 520px) {
+        gap: 2em;
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+        grid-template-rows: repeat(2, minmax(0, 1fr));
+        margin-bottom: 2em;
+    }
+
+    @media screen and (min-width: 900px) {
+        grid-template-columns: repeat(4, minmax(0, 1fr));
+        grid-template-rows: repeat(1, minmax(0, 1fr));
+    }
 }
 
 .wsu-button-grid__button {
@@ -46,20 +66,28 @@
     position: relative;
     z-index: 3;
     width: 100%;
-    padding: 1.5em;
+    padding: 1em;
     border-radius: 3px;
     transition: all 300ms;
     color: var(--green-600);
     box-shadow: 0 0 4px rgba(6, 43, 39,0.3);
     background-color: var(--gold-200);
-    background-image: radial-gradient(230% 100% at 50% 100%,rgba(219, 174, 37,0.9),50%,transparent 100%)
+    background-image: radial-gradient(230% 100% at 50% 100%,rgba(219, 174, 37,0.9),50%,transparent 100%);
+
+    @media screen and (min-width: 520px) {
+        padding: 1.5em;
+    }
 }
 
+.wsu-button-grid__button:focus,
 .wsu-button-grid__button:hover {
     background-color: var(--gold-100);
     background-image: radial-gradient(230% 100% at 50% 100%,rgba(219, 174, 37,0.75),50%,transparent 100%);
     box-shadow: 0 -1px 3px rgba(255, 245, 214,0.2), 0 6px 8px rgba(5,33,30,0.4);
-    transform: translateY(-5px);
+
+    @media screen and (min-width: 520px) {
+        transform: translateY(-5px);
+    }
 }
 
 .wsu-button-grid__link {
@@ -69,11 +97,16 @@
 
 .wsu-button-grid__title {
     width: 100%;
-    font-size: 1.4em;
+    font-size: 1.25em;
     line-height: 1.1em;
     font-weight: 700;
-    margin-bottom: 1.3rem;
+    margin-bottom: 1rem;
     text-shadow: 0 -1px 0 rgba(255,245,214,0.3), 0 1px 0 rgba(200, 159, 31, 0.3);
+
+    @media screen and (min-width: 520px) {
+        font-size: 1.4em;
+        margin-bottom: 1.3rem;
+    }
 }
 
 .wsu-button-grid__description {
@@ -82,37 +115,48 @@
 }
 
 .wsu-service-portal__background {
-    color: var(--green-700);
+    color: var(--green-900);
     background-image: url('https://services.wayne.edu/TDPortal/Images/Viewer?fileName=f00d37f1-4ba3-4866-ad4f-5dc115c3574e.jpg&beidInt=78');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     position: absolute;
     inset: 0;
+    opacity: 0.3;
+
+    @media screen and (min-width: 900px) {
+        opacity: 1;
+    }
 }
 
 /* ------------------------------------
  * Search 
  * ------------------------------------ */
 .wsu-search {
+    width: 100%;
     background-color: var(--green-700);
     padding-top: 2.5rem;
     padding-bottom: 3rem;
     position: relative;
     overflow: hidden;
-    background-image: radial-gradient(200% 100% at 50% 100%,rgba(5,33,30,.9) 10%,transparent 100%);
+    background-image: radial-gradient(200% 100% at 50% 100%,rgba(5,33,30,.6) 10%,transparent 100%);
+    display: grid;
+    gap: 1em;
+
+    @media screen and (min-width: 520px) {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+    }
+
+    @media screen and (min-width: 900px) {
+        display: flex;
+        gap: 2em;
+    }
 }
 
-.wsu-search__container {
-    display: flex;
-    gap: 2em;
-    margin: 0 auto;
-    width: 70%;
-    justify-content: center;
-    align-items: center;
-}
-
-.wsu-portal-page .wsu-search__container h2 {
+.wsu-portal-page .wsu-search__title {
     color: var(--gold-300);
     text-transform: uppercase;
     font-size: 18px;
@@ -120,11 +164,11 @@
     margin: 0;
 }
 
-.wsu-search__container .site-search {
-    width: 400px;
-    max-width: inherit !important;
-    margin-bottom: 0;
+.wsu-search__search-bar {
+    width: 100%;
+    max-width: 500px;
 }
+
 
 /* ------------------------------------
  * Portal overview 
@@ -139,74 +183,8 @@
     margin-bottom: 0.75em;
 }
 
-/* ------------------------------------
- * Footer 
- * ------------------------------------ */
-.wsu-footer {
-    width: 100%;
-    padding-top: 3rem;
-    padding-bottom: 5rem;
-    background-color: var(--green-600);
-    color: var(--white);
-    display: flex;
-    border-top: 20px solid var(--green-700);
-    font-weight: 300;
-    font-size: 1.1em;
-}
-
-.wsu-footer h2,
-.wsu-footer h3 {
-    color: var(--gold-300);
-    font-weight: 500;
-} 
-
-.wsu-footer h2 a,
-.wsu-footer h3 a {
-    color: var(--gold-300);
-    text-underline-offset: 5px;
-    text-decoration-color: var(--green-600);
-}
-
-.wsu-footer em {
-    display: block;
-    margin-bottom: 0.5em; 
-    font-size: 12px; 
-    font-style: normal;
-    text-transform: uppercase; 
-    letter-spacing: 0.09em;
-}
-
-.wsu-footer a {
-    color: var(--white); 
-    text-decoration-color: var(--green-200);
-    text-decoration-line: underline;
-    text-decoration-style: solid;
-    text-decoration-thickness: 1px;
-    text-underline-offset: 4px;
-}
-
-.wsu-footer a:hover {
-    text-decoration-color: var(--white);
-    text-decoration-thickness: 2px;
-    transition: all 300ms;
-}
-
-.wsu-footer th {
-    font-weight: 400;
-    padding-bottom: 1.5rem;
-    letter-spacing: 0.09em;
-    font-size: 12px; 
-    text-transform: uppercase;
-    color: var(--gold);
-}
-
-.wsu-footer td {
-    padding-right: 2em;
-    padding-bottom: 1em;
-}
-
-.wsu-footer > div {
-    width: 100%;
+.youtube-video-container {
+    margin-bottom: 1.5rem;
 }
 
 /* ------------------------------------
@@ -217,15 +195,37 @@
 }
 
 .wsu-portal-page h1 {
-    font-size: 72px;
+    font-size: 52px;
+
+    @media screen and (min-width: 520px) {
+        font-size: 72px;
+    }
 }
 
 .wsu-portal-page h2 {
-    font-size: 35px;
+    font-size: 30px;
+
+    @media screen and (min-width: 520px) {
+        font-size: 35px;
+    }
 }
 
 .wsu-portal-page h3 {
-    font-size: 25px;
+    font-size: 20px;
+
+    @media screen and (min-width: 520px) {
+        font-size: 25px;
+    }
+}
+
+.wsu-portal-page h4 {
+    font-size: 18px;
+    text-transform: uppercase;
+    letter-spacing: 0.09em;
+
+    @media screen and (min-width: 520px) {
+        font-size: 16px;
+    }
 }
 
 .wsu-portal-page .container {
@@ -240,13 +240,18 @@
 }
 
 .wsu-portal-page .row {
-    margin-left: 0 !important;
-    margin-right: 0 !important;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 .wsu-container .row {
     margin-right: -15px;
     margin-left: -15px;
+}
+
+#Column1 {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
 }
 
 /* Replace Bootstrap's container */
