--- a/styles-global.css
+++ b/styles-global.css
@@ -16,8 +16,30 @@ footer {
 .wsu-container {
     width: 100%;
     margin: 0 auto;
-    padding-right: max(1.5rem, (100% - 1140px) / 2) !important;
-    padding-left: max(1.5rem, (100% - 1140px) / 2) !important;
+    padding-right: max(25px, (100% - 1140px) / 2) !important;
+    padding-left: max(25px, (100% - 1140px) / 2) !important;
+}
+
+.flex {
+    display: flex;
+    gap: 2em;
+}
+
+.grid {
+    display: grid;
+    width: 100%;
+}
+
+.grid > * {
+    width: 100%;
+}
+
+.grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.w-1\/3 {
+    width: 33%;
 }
 
 /* ------------------------------------
@@ -110,29 +132,8 @@ a.DetailAction {
     position: absolute;
     z-index: 0;
     content: "";
-    background-image: radial-gradient(200% 100% at 50% 100%,rgba(5,33,30,.9) 10%,transparent 100%);
+    background-image: radial-gradient(500% 100% at 50% 100%,rgba(5,33,30,.95) 10%,transparent 100%);
     inset: 0;
-}
-
-.flex {
-    display: flex;
-    gap: 2em;
-}
-
-.list-none {
-    list-style-type: none;
-    padding-left: 0;
-}
-
-@media screen and (min-width: 560px) {
-    .wsu-button-row {
-        display: grid; 
-        grid-template-columns: repeat(1, minmax(0, 1fr)); 
-        gap: 2rem;
-    }
-    .wsu-button-row {
-        grid-template-columns: repeat(3, minmax(0, 1fr)); 
-    }
 }
 
 /* ------------------------------------
@@ -192,69 +193,128 @@ a.DetailAction {
     width: 100%;
     padding-top: 3rem;
     padding-bottom: 5rem;
+    justify-content: space-between;
     background-color: var(--green-600);
-    color: var(--white);
-    display: flex;
     border-top: 20px solid var(--green-700);
-    font-weight: 300;
-    font-size: 1.1em;
+    color: var(--green-50);
+    font-weight: 400;
+    font-size: 16px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
 
-    h2,
-    h3 {
-        color: var(--gold-300);
-        font-weight: 500;
-    } 
-
-    h2 a,
-    h3 a {
-        color: var(--gold-300);
-        text-underline-offset: 5px;
-        text-decoration-color: var(--green-600);
-
-        &:hover {
-            text-decoration-color: var(--gold-300);
-        }
+    @media screen and (min-width: 900px) {
+        flex-wrap: nowrap;
     }
+}
 
-    em {
-        display: block;
-        margin-bottom: 0.5em; 
-        font-size: 12px; 
-        font-style: normal;
-        text-transform: uppercase; 
-        letter-spacing: 0.09em;
-    }
+.wsu-footer__left-col {
+    display: flex;
+    flex-direction: column;
+    row-gap: 30px;
+    width: 100%;
+}
 
-    a {
-        color: var(--white); 
-        text-decoration-color: var(--green-200);
-        text-decoration-line: underline;
-        text-decoration-style: solid;
-        text-decoration-thickness: 1px;
-        text-underline-offset: 4px;
-
-        &:hover {
-            text-decoration-color: var(--white);
-            text-decoration-thickness: 2px;
-            transition: all 300ms;
-        }
-    }
-
-    th {
-        font-weight: 400;
-        padding-bottom: 1.5rem;
-        letter-spacing: 0.09em;
-        font-size: 12px; 
-        text-transform: uppercase;
-        color: var(--gold);
-    }
-
-    td {
-        padding-right: 2em;
-        padding-bottom: 1em;
-    }
-
-    & > div {
+.wsu-footer .wsu-footer__wayne-contact,
+.wsu-footer .wsu-footer__cit-contact,
+.wsu-footer__support-contact {
         width: 100%;
+}
+
+.wsu-footer table {
+    margin-top: 20px;
+    width: 100%;
+
+    @media screen and (min-width: 520px) {
+        max-width: 350px;
     }
+}
+
+.wsu-footer .wsu-footer__support-contact table {
+    @media screen and (min-width: 900px) {
+        max-width: 100%;
+    }
+}
+
+.wsu-footer__service-providers {
+    color: var(--green-100);
+    font-size: 16px; 
+    font-weight: 400;
+    letter-spacing: 0.09em;
+    text-transform: uppercase;
+}
+
+.wsu-footer th {
+    border: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+    white-space: nowrap; /* 1 */
+}
+
+.wsu-footer td {
+    vertical-align: text-top;
+    padding-bottom: 1em;
+}
+
+.wsu-footer td:first-child {
+    padding-right: 16px;
+}
+
+.wsu-footer td:last-child {
+    width: 105px;
+}
+
+.wsu-footer a {
+    color: var(--green-50); 
+    transition: all 300ms;
+    text-decoration-line: underline;
+    text-decoration-style: solid;
+    text-underline-offset: 4px;
+    text-decoration-thickness: 1px;
+    text-decoration-color: var(--green-300);
+}
+
+.wsu-footer a:focus,
+.wsu-footer a:hover {
+    text-decoration-thickness: 2px;
+    text-decoration-color: var(--green-50);
+}
+
+.wsu-footer h2,
+.wsu-footer h3 {
+    color: var(--gold-300);
+    font-weight: 500;
+} 
+
+.wsu-footer h2 a,
+.wsu-footer h3 a {
+    color: var(--gold-300);
+    text-underline-offset: 5px;
+    text-decoration-color: var(--green-600);
+}
+
+.wsu-footer h2 a:hover,
+.wsu-footer h3 a:hover {
+    text-decoration-color: currentColor;
+}
+
+.wsu-footer em {
+    color: var(--green-100);
+    display: block;
+    font-size: 16px; 
+    letter-spacing: 0.09em;
+    font-style: normal;
+    text-transform: uppercase; 
+    margin-bottom: 6px; 
+}
+
+address {
+    line-height: 1.5em;
+    margin: 0;
 }
