--- a/styles-global.css
+++ b/styles-global.css
@@ -79,9 +79,9 @@ footer {
 button.DetailAction,
 a.DetailAction {
     background-color: var(--gold-200);
-    color: var(--green-800);
-
+    color: var(--green-600);
     background-image: radial-gradient(200% 100% at 50% 100%, var(--gold-500), 50%, transparent 100%);
+    transition: all 300ms;
 
     &:hover {
         background-color: var(--gold-100);
